:hammer: Modify code to minimise packages installed

--- a/code/02_create_report_template.Rmd
+++ b/code/02_create_report_template.Rmd
@@ -10,7 +10,8 @@ params:
 # Load required packages -------------------------------------------------------
 if (!require("pacman")) install.packages("pacman")
 pacman::p_load(here,
-               tidyverse,
+               dplyr,
+               ggplot2,
                clock, 
                gt)  
 
