--- a/code/02_create_report_template.Rmd
+++ b/code/02_create_report_template.Rmd
@@ -10,6 +10,7 @@ params:
 # Load required packages -------------------------------------------------------
 if (!require("pacman")) install.packages("pacman")
 pacman::p_load(here,
+               readr,
                dplyr,
                ggplot2,
                clock, 
