--- a/code/02_create_report_template.Rmd
+++ b/code/02_create_report_template.Rmd
@@ -1,21 +1,32 @@
 ---
 title: "Labour force report for `r paste(params$sex, params$measure)` individuals" 
-output: html_document
+output: github_document
 params:
   sex: "all" 
   measure: "part-time"    
 ---
 
-```{r, include=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 # Load required packages -------------------------------------------------------
-if (!require("pacman")) install.packages("pacman")
-pacman::p_load(here,
-               readr,
-               stringr, 
-               dplyr,
-               ggplot2,
-               clock, 
-               gt)  
+# Input package names
+packages <- c("here",
+              "readr",
+              "stringr", 
+              "dplyr",
+              "ggplot2",
+              "clock", 
+              "magrittr",
+              "gt") 
+
+installed_packages <- packages %in% rownames(installed.packages())
+
+# Install new packages
+if (any(installed_packages == FALSE)) {
+  install.packages(packages[!installed_packages])
+}
+
+# Load new packages silently  
+invisible(lapply(packages, library, character.only = TRUE))
 
 # Load labour_force_clean dataset ----------------------------------------------
 labour_force <- read_csv(here("data",
@@ -62,7 +73,7 @@ labour_force %>%
 
 ### Table of labour force numbers and changes in the last 12 months  
 
-This table displays the adjusted labour force numbers and adjusted change in labour force numbers for `r paste(params$measure, params$sex)` individuals for the last 12 months, from `r Sys.Date() %>% add_months(-12) %>% str_extract("^[0-9]{4}-[0-9]{2}")` to `r max(labour_force$time_period) %>% str_extract("^[0-9]{4}-[0-9]{2}")`.     
+This table displays the adjusted labour force numbers and adjusted change in labour force numbers for `r paste(params$measure, params$sex)` individuals for the last 12 months, from `r Sys.Date() %>% add_months(-12) %>% str_extract("^[0-9]{4}-[0-9]{2}")` to `r max(labour_force$time_period) %>% str_extract("^[0-9]{4}-[0-9]{2}")`.   
 
 ```{r, echo=FALSE}
 # Display table ----------------------------------------------------------------
@@ -70,16 +81,16 @@ This table displays the adjusted labour force numbers and adjusted change in lab
 up_arrow <- "<span style=\"color:steelblue\">&#9650;</span>"
 down_arrow <- "<span style=\"color:salmon\">&#9660;</span>"
 
-# Create filter to display only the last 6 months of records
-six_months_ago <- Sys.Date() %>% add_months(-12)
+# Create filter to display only the last 12 months of records
+twelve_months_ago <- Sys.Date() %>% add_months(-12)
 
 # Specify table style
 labour_force %>% 
   filter(sex == params$sex, 
          measure == params$measure,
-         time_period >= six_months_ago) %>%
+         time_period >= twelve_months_ago) %>%
   arrange(time_period) %>%
-  mutate(year =  get_year(time_period),
+  mutate(year = get_year(time_period),
          month = get_month(time_period)) %>% 
   select(-c(sex, measure, time_period, last_obs_value)) %>% 
   relocate(year, month) %>% 
@@ -104,7 +115,6 @@ labour_force %>%
   opt_footnote_marks(marks = "letters") %>%
    tab_options(table.font.size = "small")
 ```
-
 
 ***  
 Report last updated on `r Sys.Date()` from the [ABS labour force dataset](https://www.abs.gov.au/statistics/labour/employment-and-unemployment/labour-force-australia/latest-release)  
