:hammer: change output reports to .Rmd format to fix graphical output locations

--- a/code/02_create_report_template.Rmd
+++ b/code/02_create_report_template.Rmd
@@ -12,9 +12,11 @@ params:
 packages <- c("here",
               "readr",
               "stringr", 
+              "clock",
               "dplyr",
               "ggplot2",
-              "clock", 
+              "rmarkdown",
+              "knitr", 
               "magrittr") 
 
 installed_packages <- packages %in% rownames(installed.packages())
