:hammer: change report template output parameters

--- a/code/02_create_report_template.Rmd
+++ b/code/02_create_report_template.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Labour force report for `r paste(params$sex, params$measure)` individuals" 
-output: github_document
+output: 
+  github_document:
+    html_preview: false
 params:
   sex: "all" 
   measure: "part-time"    
